--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1><p>A gastronomic experience that will catapult your taste buds around Asia.</p></h1>
+	<h1><p>A gastronomic experience that will catapult your taste buds around Asia!</p></h1>
 	<h3><p>Based on years of traveling, eating, cooking and living asian food, Nate's Pork Belly will give you an experience unlike anything you've ever had before.</p></h3>
 </body>
 </html>
