--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="css/style.css"> </head>
-	<title>Tiny Horse Breweing Company</title>
-<body>
-	<h1>Tiny Horse Brewing Company</h1>
+	<head>
+		<title>Tiny Horse Breweing Company</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		 <img src="images/sunsetsilhouette.jpeg">
+		 <h1>Tiny Horse Brewing Company</h1>
+		
 		<h2 id="slogan">Saddle Up!</h2>
 <p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy the dream</p> 
 </body>
