--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,10 +5,10 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		 <img src="images/sunsetsilhouette.jpeg">
+		 <img src="https://images.unsplash.com/photo-1567813923985-2071e2a0a0ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
 		 <h1>Tiny Horse Brewing Company</h1>
-		
-		<h2 id="slogan">Saddle Up!</h2>
-<p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy the dream</p> 
-</body>
+		<hr>
+		<h2>id="slogan">Saddle Up!</h2>
+		<p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy the dream</p> 
+	</body>
 </html>
