--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,6 +9,6 @@
 		 <h1>Tiny Horse Brewing Company</h1>
 		<h2>Saddle Up!</h2>
 			<hr>
-		<p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy the dream</p> 
+		<p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</p> 
 	</body>
 </html>
