--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,24 @@
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
 		<h2>Saddle Up!</h2>
+		<div> class="btn-group">
+			<button>About Us</button>
+			<button>Beer</button>
+			<button>Bites</button>
+			<button>Swag</button>
+		</div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 			<hr>
-		<p>Tiny Horse Brewing Company started as a dream of a few friends to create their own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</p> 
+		<p>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</p> 
 	</body>
 </html>
