--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,12 +7,23 @@
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
 		<h2>Saddle Up!</h2>
-		<div> class="btn-group">
+		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
 			<button>Bites</button>
 			<button>Swag</button>
 		</div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 			<br>
 			<br>
 			<br>
