--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -35,7 +35,19 @@
 			<br>
 			<br>
 			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 			<hr>
-		<p>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</p> 
+		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 	</body>
 </html>
