--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
+		 <img src="images/tinyhorselogo.png" alt="tinyhorselogo" width="36" height="24">
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
