--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
-		 <img src="images/tinyhorselogo.png" alt="tinyhorselogo" width="36" height="24">
+		 <img src="images/tinyhorselogo.png" alt="tinyhorselogo" width="27em" height="20em">
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
@@ -40,7 +40,6 @@
 			<br>
 			<br>
 			<br>
-			<hr>
 		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
