--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
-		 <img src="images/tinyhorsePNG.png" alt="tinyhorselogo" width="200" height="250">
+		 <img src="images/tinyhorsePNG.png" alt="tiny horse png" width="200" height="250">
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
