--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
-		<title>Tiny Horse Breweing Company</title>
+		<title>Tiny Horse Brewing Company</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		 <h1>Tiny Horse Brewing Company</h1>
-		 <img src="images/tinyhsideways.png" alt="tiny horse png" width="200" height="250">
+		 <img src="images/thtight.png" alt="tiny horse tight crop" width="200" height="250">
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
