--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,8 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		 <h1>Tiny Horse Brewing Company</h1>
-		 <img src="images/thtight.png" alt="tiny horse tight crop" width="200" height="250">
+		 <img src="images/thtight.png" alt="tiny horse tight crop" width="75" height="93.75" align="left">
+		 <br>
+		<h1>Tiny Horse Brewing Company</h1>
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
