--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script&display=swap" rel="stylesheet">
 		<title>Tiny Horse Brewing Company</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		 <img src="images/thtight.png" alt="tiny horse tight crop" width="75" height="93.75" align="left">
+		 <img src="images/thtight.png" alt="tiny horse tight crop" width="75" height="93.75" align="center">
 		 <br>
 		<h1>Tiny Horse Brewing Company</h1>
 		<div class="btn-group">
