--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		 <img src="images/thtightcopy.png" alt="tiny horse tight crop" width="75" height="93.75" align="center">
+		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="75" height="93.75" align="center">
 		 <br>
 		<h1>Tiny Horse Brewing Company</h1>
 		<div class="btn-group">
