--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<div id="wrapper">
 		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="75" height="93.75" align="center">
 		 <br>
 		<h1>Tiny Horse Brewing Company</h1>
@@ -44,5 +45,6 @@
 		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
+	</div>
 	</body>
 </html>
