--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script&display=swap" rel="stylesheet">
-		<title>Tiny Horse Brewing Company</title>
+		<title>Tiny Horse Brewing Co.</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
@@ -42,7 +42,7 @@
 			<br>
 			<br>
 			<br>
-		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own line of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
+		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own brand of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
 	</footer>
