--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -41,8 +41,10 @@
 			<br>
 			<br>
 			<br>
+	<footer>
 		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own brand of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
+	</footer>
 	</body>
 </html>
