--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE> html
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
 		<div id="wrapper">
 		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="75" height="93.75" align="center">
 		 <br>
-		<h1>Tiny Horse Brewing Company</h1>
+		<h1>Tiny Horse Brewing Co.</h1>
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
