--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -9,7 +9,9 @@
 		<div id="wrapper">
 		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="75" height="93.75" align="center">
 		 <br>
+	<header>
 		<h1>Tiny Horse Brewing Co.</h1>
+	</header>
 		<div class="btn-group">
 			<button>About Us</button>
 			<button>Beer</button>
