--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE> html
+<!DOCTYPE>
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script&display=swap" rel="stylesheet">
@@ -43,10 +43,10 @@
 			<br>
 			<br>
 			<br>
-	<footer>
 		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own brand of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
-	</footer>
+
+	<footer>&copy; 2020 NC</footer>
 	</body>
 </html>
