--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -17,6 +17,7 @@
 			<button>Beer</button>
 			<button>Bites</button>
 			<button>Swag</button>
+		</div>
 			<br>
 			<br>
 			<br>
@@ -43,9 +44,11 @@
 			<br>
 			<br>
 			<br>
+	<main>
 		<h3>Tiny Horse Brewing Company started as a dream of one man to create his own brand of beer. While a lot of hard work went into making this dream a reality, we're pleased that other can now enjoy that same dream.</h3>
 			<hr>
 		<h2>Saddle Up!</h2>
+	</main>
 
 	<footer>&copy; 2020 NC</footer>
 	</body>
