--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,12 +5,11 @@
 		<title>Tiny Horse Brewing Co.</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
-	<body>
+	<header>
+		<h1>Tiny Horse</h1>
 		<div id="wrapper">
 		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="75" height="93.75" align="center">
-		 <br>
-	<header>
-		<h1>Tiny Horse Brewing Co.</h1>
+		<h1>Brewing Co.</h1>
 	</header>
 		<div class="btn-group">
 			<button>About Us</button>
