--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,9 +5,10 @@
 		<title>Tiny Horse Brewing Co.</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
+	<div id="wrapper">
 	<header>
 		<h1>Tiny Horse</h1>
-		<div id="wrapper">
+		
 		 <img src="images/thtightcopy.png" alt="tiny horse tight crop copy" width="55" height="70" align="center">
 		<h1>Brewing Co.</h1>
 	</header>
@@ -48,7 +49,7 @@
 			<hr>
 		<h2>Saddle Up!</h2>
 	</main>
-
 	<footer>&copy; 2020 NC</footer>
+	</div>
 	</body>
 </html>
